--- a/src/RaffleWinnersPage.css
+++ b/src/RaffleWinnersPage.css
@@ -151,6 +151,14 @@
   background: white;
 }
 
+/* Data Table */
+.data-table {
+  background: white;
+  flex: 1 1 auto;
+  overflow-y: auto;
+  width: 100%;
+}
+
 /* Data Rows */
 .data-row {
   display: grid;
